@@ -1,6 +1,6 @@
 Package: dbarts
-Version: 0.9-23
-Date: 2023-01-19
+Version: 0.9-24
+Date: 2023-12-04
 Title: Discrete Bayesian Additive Regression Trees Sampler
 Authors@R: c(
   person("Vincent", "Dorie", role = c("aut", "cre"), email = "vdorie@gmail.com", comment = c(ORCID = "0000-0002-9576-3064")),
